[tool.poetry]
name = "trakcli"
version = "0.0.1"
description = "Keep a record of the time you dedicate to your projects."
authors = ["lcfd <9001053+fedriz@users.noreply.github.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.scripts]
trak = "trak.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = ">=0.9.0"}


[tool.poetry.group.dev.dependencies]
black = ">=23.9.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
