[tool.poetry]
name = "trakcli"
version = "0.0.2"
description = "Keep a record of the time you dedicate to your projects."
authors = ["Luca Fedrizzi <9001053+fedriz@users.noreply.github.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://usetrak.com/"
repository = "https://github.com/lcfd/trak"
keywords = ["cli", "timetraker", "time", "traker", "tool"]


[tool.poetry.urls]
"Trak on X" = "https://twitter.com/usetrakcom"
"Luca Fedrizzi's website" = "https://lucafedrizzi.com/"
"Luca Fedrizzi on X" = "https://twitter.com/lc_fd"


[tool.poetry.scripts]
trak = "trakcli.main:app"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = ">=0.9.0"}


[tool.poetry.group.dev.dependencies]
black = ">=23.9.1"
ruff = "^0.0.292"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
